testes automatizados v-1