@@ -1,6 +1,7 @@
 package saucedemo_standard.CN07;
 
 import io.github.bonigarcia.wdm.WebDriverManager;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
@@ -28,43 +29,101 @@ public class CT71_Tests {
         navegador.findElement(By.id("login-button")).click();
 
         WebElement[] productName = navegador.findElements(By.className("inventory_item_name")).toArray(new WebElement[0]);
-
         String[] name = Arrays.stream(productName)
                 .map(WebElement::getText)
                 .toArray(String[]::new);
 
-        WebElement[] productDescription = navegador.findElements(By.className("inventory_item_name")).toArray(new WebElement[0]);
-
+        WebElement[] productDescription = navegador.findElements(By.className("inventory_item_desc")).toArray(new WebElement[0]);
         String[] descp = Arrays.stream(productDescription)
                 .map(WebElement::getText)
                 .toArray(String[]::new);
 
         List<WebElement> priceElements = navegador.findElements(By.className("inventory_item_price"));
-
         List<Float> precosLista = priceElements.stream()
                 .map(element -> Float.parseFloat(element.getText().replace("$", "")))
-                .collect(Collectors.toList());
+                .toList();
 
-        Float[] precos = precosLista.toArray(new Float[0]);
+        List<WebElement> precoFloat = navegador.findElements(By.className("inventory_item_price"));
+        Float[] precoF = precoFloat.stream()
+                .map(element -> Float.parseFloat(element.getText().replace("$", "")))
+                .toArray(Float[]::new);
+        String[] precoS = Arrays.stream(precoF)
+                .map(String::valueOf)
+                .toArray(String[]::new);
 
-        float soma = (float) Arrays.stream(precos).mapToDouble(Float::doubleValue).sum();
+        float soma = (float) Arrays.stream(precoF)
+                .mapToDouble(Float::doubleValue)
+                .sum();
 
         List<WebElement> linksProdutos = navegador.findElements(By.className("inventory_item_name"));
+        List<String> link = linksProdutos.stream()
+                .map(WebElement::getText)
+                .toList();
 
         for (WebElement links : linksProdutos){
             navegador.findElement(By.className("btn_primary")).click();
         }
 
+        String[] linkArray = link.toArray(new String[0]);
+
         navegador.findElement(By.className("svg-inline--fa")).click();
+
+        WebElement[] itemNames = navegador.findElements(By.className("inventory_item_name")).toArray(new WebElement[0]);
+        String[] item = Arrays.stream(itemNames)
+                .map(WebElement::getText)
+                .toArray(String[]::new);
+
+        Assertions.assertArrayEquals(item,name);
+
+        WebElement[] itemDescription = navegador.findElements(By.className("inventory_item_desc")).toArray(new WebElement[0]);
+        String[] itemDes = Arrays.stream(itemDescription)
+                .map(WebElement::getText)
+                .toArray(String[]::new);
+
+        Assertions.assertArrayEquals(itemDes,descp);
+
+        WebElement[] precoItem = navegador.findElements(By.className("inventory_item_price")).toArray(new WebElement[0]);
+        String[]  precoI = Arrays.stream(precoItem)
+                .map(WebElement::getText)
+                .toArray(String[]::new);
+
+        Assertions.assertArrayEquals(precoI,precoS);
 
         navegador.findElement(By.className("btn_action")).click();
 
         navegador.findElement(By.id("first-name")).sendKeys("Nome");
-
         navegador.findElement(By.id("last-name")).sendKeys("Sobrenome");
-
         navegador.findElement(By.id("postal-code")).sendKeys("55555-555");
 
-        navegador.findElement(By.className("btn_action")).click();
+        navegador.findElement(By.className("btn_primary")).click();
+
+        WebElement[] Names = navegador.findElements(By.className("inventory_item_name")).toArray(new WebElement[0]);
+        String[] nam = Arrays.stream(Names)
+                .map(WebElement::getText)
+                .toArray(String[]::new);
+
+        Assertions.assertArrayEquals(item,name);
+
+        WebElement[] itemDescrip = navegador.findElements(By.className("inventory_item_desc")).toArray(new WebElement[0]);
+        String[] des = Arrays.stream(itemDescrip)
+                .map(WebElement::getText)
+                .toArray(String[]::new);
+
+        Assertions.assertArrayEquals(des,descp);
+
+        List<WebElement> precoElemento = navegador.findElements(By.className("inventory_item_price"));
+        Float[] precoE = precoElemento.stream()
+                .map(element -> Float.parseFloat(element.getText().replace("$", "")))
+                .toArray(Float[]::new);
+
+        Assertions.assertArrayEquals(precoE,precoF);
+
+        Float valorItens = 129.94F;
+
+        Assertions.assertEquals(soma,valorItens);
+
+        navegador.findElement(By.className("btn_action"));
+
+        navegador.quit();
     }
 }
